--- a/eshop/shop/templates/inc/navbar.html
+++ b/eshop/shop/templates/inc/navbar.html
@@ -25,11 +25,14 @@
                     <i class="fa fa-bars"></i> All category 
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">all categories </a>
+                    <a class="dropdown-item" href="{% url "store" %}">All Products</a>
+                    {% for category in links %}
+                        <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }} </a>
+                    {% endfor %}
                 </div>
             </div>  
         </div> 
-        <a href="#" class="btn btn-outline-primary">Store</a>
+        <a href="{% url "store" %}" class="btn btn-outline-primary">Store</a>
         <div class="col-lg  col-md-6 col-sm-12 col">
             <form action="#" class="search">
                 <div class="input-group w-100">
