--- a/eshop/shop/templates/index.html
+++ b/eshop/shop/templates/index.html
@@ -4,18 +4,13 @@
 
 <section class="section-name padding-y-sm">
 <div class="container">
-<header class="section-heading">
-	<a href="#" class="btn btn-outline-primary float-right">See all</a>
-	<h3 class="section-title">Popular products</h3>
-</header>
-
 <div class="row">
 	{% for product in products %}
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="#" class="img-wrap"><img src="{{ product.images.url }}"></a>
+			<a href="{{ product.get_url}}" class="img-wrap"><img src="{{ product.image.url }}"></a>
 			<figcaption class="info-wrap">
-				<a href="#" class="title">{{ product.product_name }}</a>
+				<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
 				<div class="price mt-1">€{{ product.price }}</div>
 			</figcaption>
 		</div>
@@ -24,7 +19,6 @@
 </div>
 </div>
 </section>
-
 </body>
 </html>
 {% endblock content %}
