--- a/eshop/shop/templates/store.html
+++ b/eshop/shop/templates/store.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<section class="section-pagetop bg">
-    <div class="container">
-        <h2 class="title-page">eShop</h2>  
-    </div>
-</section>
+
 <section class="section-content padding-y">
     <div class="container">
     <div class="row">
@@ -21,7 +17,10 @@
             <div class="filter-content collapse show" id="collapse_1" style="">
                 <div class="card-body"> 
                     <ul class="list-menu">
-                    <li><a href="#">list  </a></li>
+                        <li><a href="{% url "store" %}">All Products</a></li>
+                        {% for category in links %}
+                            <li><a href="{{ category.get_url }}">{{ category.category_name }} </a></li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -102,11 +101,11 @@
             <div class="col-md-4">
                 <figure class="card card-product-grid">
                     <div class="img-wrap">   
-                        <img src="{{ product.image.url }}">  
+                        <a href="{{ product.get_url }}"><img src="{{ product.image.url }}"></a>
                     </div>
                     <figcaption class="info-wrap">
                         <div class="fix-height">
-                            <a href="#" class="title">{{ product.product_name }}</a>
+                            <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                             <div class="price-wrap mt-2">
                                 <span class="price">€{{ product.price }}</span>
                             </div>
