--- a/eshop/shop/templates/store.html
+++ b/eshop/shop/templates/store.html
@@ -110,7 +110,7 @@
                                 <span class="price">€{{ product.price }}</span>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                        <a href="{% url "add_cart" product.id %}" class="btn btn-block btn-primary">Add to cart </a>
                     </figcaption>
                 </figure>
             </div>
