--- a/eshop/shop/templates/cart.html
+++ b/eshop/shop/templates/cart.html
@@ -30,7 +30,7 @@
                     <figure class="itemside align-items-center">
                         <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
                         <figcaption class="info">
-                            <a href="#" class="title text-dark">{{ cart_item.product.product_name}}</a>
+                            <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name}}</a>
                         </figcaption>
                     </figure>
                 </td>
@@ -82,7 +82,7 @@
                         <img src="{% static "./images/misc/payments.png" %}" height="26">
                     </p>
                     <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-                    <a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
+                    <a href="{% url "store" %}" class="btn btn-light btn-block">Continue Shopping</a>
                 </div>
                 </div>   
         </aside>   
