--- a/eshop/shop/templates/store.html
+++ b/eshop/shop/templates/store.html
@@ -110,20 +110,38 @@
                                 <span class="price">€{{ product.price }}</span>
                             </div>
                         </div>
-                        <a href="{% url "add_cart" product.id %}" class="btn btn-block btn-primary">Add to cart </a>
+                        {% if product.stock <= 0 %}
+                            <h5 class="text-danger text-center">Out of stock</h5>
+                        {% else %}
+                            <a href="{{ product.get_url}}" class="btn btn-block btn-primary">View Details</a>
+                        {% endif %}
                     </figcaption>
                 </figure>
             </div>
         {% endfor %}    
     </div> 
     <nav class="mt-4" aria-label="Page navigation sample">
-      <ul class="pagination">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
+        {% if products.has_other_pages %}
+            <ul class="pagination">
+                {% if products.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Previous</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                {% endif %}
+                {% for page in products.paginator.page_range  %}
+                    {% if products.number == page %}
+                        <li class="page-item active"><a class="page-link" href="#">{{ page }}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if products.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Next</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                {% endif %}
+            </ul>
+        {% endif %}
     </nav>
         </main>
     </div>
