registration form view, urls

--- a/eshop/shop/templates/inc/navbar.html
+++ b/eshop/shop/templates/inc/navbar.html
@@ -51,8 +51,8 @@
                         <div class="widget-header">
                             <small class="title text-muted">Welcome guest!</small>
                             <div> 
-                                <a href="#">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="#"> Register</a>
+                                <a href="{% url "login" %}">Sign in</a> <span class="dark-transp"> | </span>
+                                <a href="{% url "register" %}"> Register</a>
                             </div>
                         </div>
                         <a href="{% url "cart" %}" class="widget-header pl-3 ml-3">
