--- a/eshop/shop/templates/accounts/login.html
+++ b/eshop/shop/templates/accounts/login.html
@@ -3,6 +3,14 @@
 {% block content %}
 
 <section class="section-conten padding-y" style="min-height:84vh">
+
+    {% if request.GET.command == 'verification' %}
+        <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1000px; margin-top:100px;">
+            Verification email has been sent to {{ request.GET.email }}
+            <br><br>
+            Already verified? <a href="{% url "login" %}">Login</a>
+        </div>
+    {% else %}
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
         <div class="card-body">
         <h4 class="card-title mb-4">Sign in</h4>
@@ -27,6 +35,7 @@
 
         <p class="text-center mt-4">Don't have account? <a href="{% url "register" %}">Sign up</a></p>
         <br><br>
+    {% endif %}
 </section>
 
 {% endblock content %}
