--- a/eshop/shop/templates/inc/navbar.html
+++ b/eshop/shop/templates/inc/navbar.html
@@ -60,7 +60,7 @@
                             <div class="widget-header">
                                 <small class="title text-muted">Welcome guest!</small>
                                 <div> 
-                                    <a href="login">Sign in</a> <span class="dark-transp"> | </span>
+                                    <a href="{% url "login" %}">Sign in</a> <span class="dark-transp"> | </span>
                                     <a href="{% url "register" %}"> Register</a>
                                 </div>
                             </div>
