--- a/eshop/shop/templates/checkout.html
+++ b/eshop/shop/templates/checkout.html
@@ -5,106 +5,107 @@
 <section class="section-content padding-y bg">
     <div class="container">
         <div class="row">
-            <aside class="col-lg-6">
-        <div class="card">
-            <div class="card-body">
-            <h4 class="card-title mb-4">Billing Address</h4>
-            <form action="">
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">First Name</label>
-                        <input type="text" name="first_name" class="form-control" required>
-                    </div>
-                    <div class="col form-group">
-                        <label for="">Last Name</label>
-                        <input type="text" name="last_name" class="form-control" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">Address</label>
-                        <input type="text" name="address_1" class="form-control" required>
-                    </div>
-                    <div class="col form-group">
-                        <label for="">Address</label>
-                        <input type="text" name="address_2" class="form-control">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">City</label>
-                        <input type="text" name="city" class="form-control" required>
-                    </div>
-                    <div class="col form-group">
-                        <label for="">Zip Code</label>
-                        <input type="text" name="zip_code" class="form-control" required>
-                    </div>
-                    <div class="col form-group">
-                        <label for="">Country</label>
-                        <input type="text" name="country" class="form-control" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col form-group">
-                        <label for="">Email</label>
-                        <input type="email" name="email" class="form-control" required>
-                    </div>
-                    <div class="col form-group">
-                        <label for="">Phone number</label>
-                        <input type="text" name="phone_number" class="form-control" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <label for="">Order comment</label>
-                    <textarea name="order_comment" rows="2" class="form-control"></textarea>
-                </div>
-            </form>
-            </div>
-        </div>
-            </aside>
+            <!-- Billing Address -->
             <aside class="col-lg-6">
                 <div class="card">
-                <div class="card-body">
-                    <table class="table table-borderless table-shopping-cart">
-                        <thead class="text-muted">
-                        <tr class="small text-uppercase">
-                        <th scope="col">Product</th>
-                        <th scope="col" width="120">Quantity</th>
-                        <th scope="col" width="120">Price</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for cart_item in cart_items %}
-                            <tr>
-                                <td>
-                                    <figure class="itemside align-items-center">
-                                        <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
-                                        <figcaption class="info">
-                                            <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name}}</a>
-                                        </figcaption>
-                                    </figure>
-                                </td>
-                                <td>
-                                    <label for="">{{ cart_item.quantity }}</label>
-                                </td>
-                                <td> 
-                                    <div class="price-wrap"> 
-                                        <var class="price">€{{ cart_item.sub_total }}</var> 
-                                        <small class="text-muted">€{{ cart_item.product.price }} </small> 
-                                    </div>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                        </table>
-                    <a href="./place-order.html" class="btn btn-primary btn-block"> Place Order </a>
-                    <a href="{% url "store" %}" class="btn btn-light btn-block">Continue Shopping</a>
+                    <div class="card-body">
+                        <h4 class="card-title mb-4">Billing Address</h4>
+                        <form action="" method='POST'>
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label for="">First Name</label>
+                                    <input type="text" name="first_name" class="form-control" required>
+                                </div>
+                                <div class="col form-group">
+                                    <label for="">Last Name</label>
+                                    <input type="text" name="last_name" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label for="">Address</label>
+                                    <input type="text" name="address_1" class="form-control" required>
+                                </div>
+                                <div class="col form-group">
+                                    <label for="">Address</label>
+                                    <input type="text" name="address_2" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label for="">City</label>
+                                    <input type="text" name="city" class="form-control" required>
+                                </div>
+                                <div class="col form-group">
+                                    <label for="">Zip Code</label>
+                                    <input type="text" name="zip_code" class="form-control" required>
+                                </div>
+                                <div class="col form-group">
+                                    <label for="">Country</label>
+                                    <input type="text" name="country" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label for="">Email</label>
+                                    <input type="email" name="email" class="form-control" required>
+                                </div>
+                                <div class="col form-group">
+                                    <label for="">Phone number</label>
+                                    <input type="text" name="phone_number" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <label for="">Order comment</label>
+                                <textarea name="order_comment" rows="2" class="form-control"></textarea>
+                            </div>
+                    </div>
                 </div>
-                </div>   
-        </aside>   
+            </aside>
+            <!-- Order Summary -->
+            <aside class="col-lg-6">
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table table-borderless table-shopping-cart">
+                            <thead class="text-muted">
+                                <tr class="small text-uppercase">
+                                    <th scope="col">Product</th>
+                                    <th scope="col" width="120">Quantity</th>
+                                    <th scope="col" width="120">Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for cart_item in cart_items %}
+                                <tr>
+                                    <td>
+                                        <figure class="itemside align-items-center">
+                                            <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
+                                            <figcaption class="info">
+                                                <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name}}</a>
+                                            </figcaption>
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        <label for="">{{ cart_item.quantity }}</label>
+                                    </td>
+                                    <td>
+                                        <div class="price-wrap">
+                                            <var class="price">€{{ cart_item.sub_total }}</var>
+                                            <small class="text-muted">€{{ cart_item.product.price }} </small>
+                                        </div>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
+                        <a href="{% url "store" %}" class="btn btn-light btn-block">Continue Shopping</a>
+                    </form>
+                    </div>
+                </div>
+            </aside>
         </div>
     </div>
-    </section>
-{% endblock content %}
-
-
+</section>
+{% endblock %}
