--- a/eshop/shop/templates/checkout.html
+++ b/eshop/shop/templates/checkout.html
@@ -5,12 +5,13 @@
 <section class="section-content padding-y bg">
     <div class="container">
         <div class="row">
+            {% include "inc/alerts.html" %}
             <!-- Billing Address -->
             <aside class="col-lg-6">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title mb-4">Billing Address</h4>
-                        <form action="" method='POST'>
+                        <form action="{% url "place_order" %}" method='POST'>
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="col form-group">
@@ -53,7 +54,7 @@
                                 </div>
                                 <div class="col form-group">
                                     <label for="">Phone number</label>
-                                    <input type="text" name="phone_number" class="form-control" required>
+                                    <input type="text" name="phone" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-row">
