--- a/eshop/shop/templates/base.html
+++ b/eshop/shop/templates/base.html
@@ -25,6 +25,8 @@
 
 <script src="{% static "js/script.js" %}" type="text/javascript"></script>
 
+<script src="https://www.paypal.com/sdk/js?client-id=test&currency=EUR"></script>
+
 <script type="text/javascript">
 
 
