--- a/eshop/shop/templates/accounts/dashboard.html
+++ b/eshop/shop/templates/accounts/dashboard.html
@@ -6,59 +6,34 @@
 {% include "inc/alerts.html" %}
 <div class="container">
     <div class="row">
-    <aside class="col-md-3">
-        <ul class="list-group">
-            <a class="list-group-item active" href="#"> My order history </a>
-            <a class="list-group-item" href="#"> Transactions </a>
-            <a class="list-group-item" href="#"> Return and refunds </a>
-            <a class="list-group-item" href="#">Settings </a>
-            <a class="list-group-item" href="#"> My Selling Items </a>
-            <a class="list-group-item" href="#"> Received orders </a>
-        </ul>
-    </aside>
+        {% include "inc/dashboard_sidebar.html" %}
     <main class="col-md-9">
         <article class="card">
         <header class="card-header">
-            <strong class="d-inline-block mr-3">Order ID: XXXXX</strong>
-            <span>Order Date: XX XXXXX XXXX</span>
+            <strong class="d-inline-block mr-3">Logged in as: </strong>
+            <span>{{ user.first_name }} {{ user.last_name }}</span>
         </header>
         <div class="card-body">
             <div class="row"> 
-                <div class="col-md-8">
-                    <h6 class="text-muted">Delivery to</h6>
-                    <p>Al Capone <br>  
-                    Phone  Email:  <br>
-                    Location:  <br> 
-                    P.O. Box: 
-                    </p>
+                <div class="col-md-6">
+                    <div class="card" style="text-align:center">
+                        <div class="card-body">
+                            <h5 class="card-title">Total Orders:</h5>
+                            <h4>{{ orders_count }}</h4>
+                            <a href=#>View Orders</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h6 class="text-muted">Payment</h6>
-                    <span class="text-success">
-                        <i class="fab fa-lg fa-cc-visa"></i>
-                        Visa  **** 4216  
-                    </span>
-                    <p>Subtotal: €356 <br>
-                        Shipping fee:  €56 <br> 
-                        <span class="b">Total:  €456 </span>
-                    </p>
+                <div class="col-md-6">
+                    <div class="card" style="text-align:center">
+                        <div class="card-body">
+                            <img src="https://www.w3schools.com/howto/img_avatar.png" alt="User Profile Picture" width="50" height="50" style="border-radius: 100%">
+                            <p class="mb-0">{{ user.email }}</p>
+                            <p>{{ user.phone_number }}</p>
+                        </div>
+                    </div>
                 </div>
             </div> 
-        </div> 
-        <div class="table-responsive">
-        <table class="table table-hover">
-            <tr>
-                <td width="65">
-                    <img src="../images/items/1.jpg" class="img-xs border">
-                </td>
-                <td> 
-                    <p class="title mb-0">Product</p>
-                    <var class="price text-muted">EUR 145</var>
-                </td>
-                <td> Seller <br> Seller </td>
-                <td width="250"> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#" class="btn btn-light"> Details </a> </td>
-            </tr>
-        </table>
         </div> 
         </article>  
     </main>
