grand total calc

--- a/eshop/shop/templates/order_complete.html
+++ b/eshop/shop/templates/order_complete.html
@@ -73,7 +73,7 @@
                                             
                                             <tr>
                                                 <th colspan="2" class="text-right">Grand Total:</th>
-                                                <th class="text-center">€{{ subtotal|add:order.tax }} </th>
+                                                <th class="text-center">€{{ grand_total }} </th>
                                             </tr>
                                         </tfoot>
                                     </table>
