--- a/eshop/shop/templates/checkout.html
+++ b/eshop/shop/templates/checkout.html
@@ -100,7 +100,7 @@
                                 {% endfor %}
                             </tbody>
                         </table>
-                        <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
+                        <button type="submit" name="submit" class="btn btn-primary btn-block">Order</button>
                         <a href="{% url "store" %}" class="btn btn-light btn-block">Continue Shopping</a>
                     </form>
                     </div>
